# exercism-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  unity.patch  unity_config.h
exercises/: CMakeLists.txt
exercises/binary_search_tree/: CMakeLists.txt
exercises/binary_search_tree/src/: binary_search_tree.c
exercises/binary_search_tree/tests/: binary_search_tree.c
exercises/collatz_conjecture/: CMakeLists.txt
exercises/collatz_conjecture/src/: collatz_conjecture.c
exercises/collatz_conjecture/tests/: collatz_conjecture.c
exercises/difference_of_squares/: CMakeLists.txt
exercises/difference_of_squares/src/: difference_of_squares.c
exercises/grains/: CMakeLists.txt
exercises/grains/src/: grains.c
exercises/grains/tests/: grains.c
exercises/hello_world/: CMakeLists.txt
exercises/hello_world/include/: hello_world.h
exercises/hello_world/tests/: hello_world.c
exercises/leap/: CMakeLists.txt
exercises/leap/src/: leap.c
exercises/leap/tests/: leap.c
exercises/resistor_color/: CMakeLists.txt
exercises/resistor_color/include/: resistor_color.h
exercises/resistor_color/src/: resistor_color.c
exercises/resistor_color/tests/: resistor_color.c
